# mechanix-sdk

./: Cargo.toml
services/audio/: Cargo.toml  README.md
services/audio/examples/: default_devices.rs  get_device.rs  list_devices.rs  list_input_devices.rs  list_output_devices.rs  mute.rs  set_default_device.rs  volume.rs
services/audio/src/: lib.rs  types.rs
services/audio/src/api/: client.rs  mod.rs
services/audio/src/audio/: client.rs
services/audio/src/hal/: mod.rs  pipewire.rs
services/audio/src/service/: manager.rs  mod.rs  state.rs
services/bluetooth/: Cargo.toml
services/bluetooth/examples/: connect_device.rs  device_management.rs  list_adapters.rs  list_devices.rs  monitor_events.rs  pairing_agent.rs  scan_devices.rs
services/bluetooth/src/: adapter.rs  bluetooth_manager.rs  device.rs  error.rs  events.rs  lib.rs  utils.rs
services/bluetooth/src/agent/: mod.rs
services/bluetooth/src/dbus/: adapter1.rs  agent_manager1.rs  battery1.rs  device1.rs  mod.rs  object_manager.rs  types.rs
services/bluetooth/src/models/: adapter_info.rs  device_info.rs  mod.rs
services/bluetooth/xml/: bluez-adapter.xml  bluez-device.xml  bluez-root.xml
services/common/: Cargo.toml
services/common/src/: dbus.rs  lib.rs
services/network-manager/: Cargo.toml  README.md
services/network-manager/examples/: README.md  active_access_point.rs  connect_open.rs  connect_psk.rs  disconnect_wifi.rs  forget_saved_connection.rs  list_active_connections.rs  list_saved_connections.rs  list_wifi_devices.rs  monitor_events.rs  scan_access_points.rs  toggle_wifi.rs
services/network-manager/src/: error.rs  events.rs  lib.rs  network_manager.rs  types.rs  wifi_device.rs
services/network-manager/src/dbus/: README.md  access_point.rs  active.rs  connection.rs  device.rs  ip4config.rs  ip6config.rs  mod.rs  network_manager.rs  settings.rs  statistics.rs  wired.rs  wireless.rs
services/network-manager/src/models/: active_connection_info.rs  mod.rs  saved_connection_info.rs  wifi_ac_info.rs  wifi_device_info.rs
services/network-manager/xml/: nm-access-point.xml  nm-active-connection.xml  nm-device-wireless.xml  nm-device.xml  nm-ip4-config.xml  nm-ip6-config.xml  nm-manager.xml  nm-settings-connection.xml  nm-settings.xml
