[package]
name = "bluetooth"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
zbus = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
