[package]
name = "network-manager"
description = "Network manager interface for Mechanix SDK"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zbus = { workspace = true }
