[package]
name = "network-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
zbus = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
num_enum = { workspace = true }
bitflags = { workspace = true }
